--- a/动手学深度学习.md
+++ b/动手学深度学习.md
@@ -169,4 +169,6 @@ for epoch in range(num_epochs):
     print(f'epoch {epoch + 1}, loss {l:f}')
 ```
 ## (四)softmax回归
-回归可以用于预测多少的问题,也可以用于分类问题
+回归可以用于预测多少的问题,也可以用于分类问题.
+### 1.网络架构
+
