--- a/动手学深度学习.md
+++ b/动手学深度学习.md
@@ -169,6 +169,7 @@ for epoch in range(num_epochs):
     print(f'epoch {epoch + 1}, loss {l:f}')
 ```
 ## (四)softmax回归
-回归可以用于预测多少的问题,也可以用于分类问题.
-### 1.网络架构
+回归可以用于预测多少的问题,也可以用于分类问题.**softmax 回归**(softmax regression)其实是 logistic 回归的一般形式，logistic 回归用于二分类，而 softmax 回归用于**多分类**.
+### 1.softmax回归原理
+
 
