--- a/动手学深度学习.md
+++ b/动手学深度学习.md
@@ -170,6 +170,189 @@ for epoch in range(num_epochs):
 ```
 ## (四)softmax回归
 回归可以用于预测多少的问题,也可以用于分类问题.**softmax 回归**(softmax regression)其实是 logistic 回归的一般形式，logistic 回归用于二分类，而 softmax 回归用于**多分类**.
-### 1.softmax回归原理
+### 1.softmax简单介绍
+对于输入数据$\{(x_1,y_1),(x_2,y_2),\ldots,(x_m,y_m)\}$有k个类别,即$y_{i}\in\{1,2,\ldots,k\}$,那么对于softmax回归主要估算输入数据$x_i$归属于每一类的概率,即:
+$$
+\begin{gathered}h_{\theta}\left(x_{i}\right)=\begin{bmatrix}p\left(y_{i}=1|x_{i};\theta\right)\\p\left(y_{i}=2|x_{i};\theta\right)\\\vdots\\p\left(y_{i}=k|x_{i};\theta\right)\end{bmatrix}=\frac{1}{\sum_{j=1}^{k}e^{\theta_{j}^{T}x_{i}}}\begin{bmatrix}e^{\theta_{1}^{T}x_{i}}\\e^{\theta_{2}^{T}x_{i}}\\\vdots\\e^{\theta_{h}^{T}x_{i}}\end{bmatrix}\end{gathered}
+$$
+其中$\theta_1,\theta_2,\ldots,\theta_k \in \theta$是模型的参数,乘以$\frac{1}{\sum_{j=1}^{k}e^{\theta_{j}^{T}x_{i}}}$是为了让概率位于$[0,1]$并且概率之和为1.
+softmax回归的代价函数(代价函数通常是损失函数在所有训练样本上的平均值或总和):
+$$L(\theta)=-\frac{1}{m}\left[\sum_{i=1}^{m}\sum_{j=1}^{k}1\left\{y_{i}=j\right\}\log\frac{e^{\theta_{j}^{T}x_{i}}}{\sum_{l=1}^{k}e^{\theta_{l}^{T}x_{i}}}\right]$$
+其中$1\{\cdot\}$是示性函数,即$1\{值为真的表达式\}=1$,$1\{值为假的表达式\}=0$.
+至于梯度下降求解最小化代价函数可以查看这篇文章:[softmax回归原理与实现](https://zhuanlan.zhihu.com/p/98061179#:~:text=softmax%20%E5%9B%9E%E5%BD%92(softmax%20regression)%E5%85%B6%E5%AE%9E%E6%98%AF%20logistic).
+### 2.softmax回归的损失函数（交叉熵损失）
+上述代价公式为什么是这样的形式？这里运用了信息论中的一个叫做交叉熵的知识.
+首先我们通过softmax得到的概率向量可能是一个这样的$p=[0.279,0.119,0.359,0.014,0.008,0.002,0.011,0.145,0.036,0.025]$，但是我们实际上想要得到的$y=[0,0,1,0,0,0,0,0,0,0]$,所以我们需要去找一个函数来衡量求得的概率与真实标签的差异.
+在信息论中有一个相对熵(KL散度)的概念:**同一个随机变量X 有两个单独的概率分布P(x), Q(x)，可以使用KL散度来衡量这两个概率分布之间的差异.**
+$$D_{KL}\left(p||q\right)=\sum_{i=1}^np\left(x_i\right)\log\left(\frac{p\left(x_i\right)}{q\left(x_i\right)}\right)$$
+这个公式展开之后:
+$$\begin{gathered}
+D_{KL}\left(p||q\right)=\sum_{i=1}^np\left(x_i\right)\log\left(\frac{p\left(x_i\right)}{q\left(x_i\right)}\right) \\
+=\sum_{i=1}^np\left(x_i\right)log\left(p\left(x_i\right)\right)-\sum_{i=1}^np\left(x_i\right)log\left(q\left(x_i\right)\right) \\
+=-H\left(p\left(x\right)\right)+\left[-\sum_{i=1}^np\left(x_i\right)log\left(q\left(x_i\right)\right)\right]
+\end{gathered}$$
+前半部分也有定义,叫做信息熵,对于信息熵的解释是: **信息量的大小与信息发生的概率成反比。概率越大，信息量越小。概率越小，信息量越大**.用$I(x)=-log(P(x))$表示信息量,而信息熵就是信息量的期望值$H(x)=- \sum P(x_i)log(P(x_i))$.后半部分叫做交叉熵,由于前半部分是一个常数,所以要想实现判定实际的输出分布与期望的输出分布的接近程度表示就可以使用交叉熵,越接近也就是交叉熵越小.以上参考自[【损失函数系列】交叉熵做损失函数理论知识_交叉熵函数如何改为损失函数](https://blog.csdn.net/gbz3300255/article/details/106810047),写的很易懂.
+### 3.softmax损失函数导数
+softmax的矢量表达式:
+$$
+\begin{aligned}
+& \mathbf{O}=\mathbf{X} \mathbf{W}+\mathbf{b} \\
+& \hat{\mathbf{Y}}=\operatorname{softmax}(\mathbf{O})
+\end{aligned}
+$$
+对于损失函数对于$o_j$的导数:
+$$
+\begin{aligned} 
+l(\mathbf{y}, \hat{\mathbf{y}}) 
+& =-\sum_{j=1}^q y_j \log \frac{\exp \left(o_j\right)}{\sum_{k=1}^q \exp \left(o_k\right)} \\ 
+& =\sum_{j=1}^q y_j \log \sum_{k=1}^q \exp \left(o_k\right)-\sum_{j=1}^q y_j o_j \\ 
+& =\log \sum_{k=1}^q \exp \left(o_k\right)-\sum_{j=1}^q y_j o_j . \\
+\therefore \quad \partial_{o_j} l(\mathbf{y}, \hat{\mathbf{y}}) 
+& =\frac{\exp \left(o_j\right)}{\sum_{k=1}^q \exp \left(o_k\right)}-y_j=\operatorname{softmax}(\mathbf{o})_j-y_j .
+\end{aligned}$$
+从上式可以看出，softmax回归的损失函数的导数是我们softmax模型分配的概率与实际发生的情况（由独热标签向量表示）之间的差异.
+## (五)图像分类数据集
+### 1.获取数据
+本节使用的是Fashion-MNIST数据集 ([Xiao _et al._, 2017](https://zh-v2.d2l.ai/chapter_references/zreferences.html#id189 "Xiao, H., Rasul, K., & Vollgraf, R. (2017). Fashion-mnist: a novel image dataset for benchmarking machine learning algorithms. arXiv preprint arXiv:1708.07747.")),MNIST(Modified National Institute of Standards and Technology database)数据集 ([LeCun _et al._, 1998](https://zh-v2.d2l.ai/chapter_references/zreferences.html#id90 "LeCun, Y., Bottou, L., Bengio, Y., Haffner, P., & others. (1998). Gradient-based learning applied to document recognition. Proceedings of the IEEE, 86(11), 2278–2324.")) 是图像分类中广泛使用的数据集之一,Fashion-MNIST数据集更复杂.
+```python
+# 使用框架内置函数下载数据集并读取到内存中
+from torchvision import tansforms
+trans = transforms.ToTensor() 
+# ToTensor实例将图像数据从PIL类变成32位浮点并除以255使得所有像素的数值均在0～1之间
+import torchvision
+mnist_train = torchvision.datasets.FashionMNIST(
+    root="../data", train=True, transform=trans, download=True)
+# root表示存储路径
+mnist_test = torchvision.datasets.FashionMNIST(
+    root="../data", train=False, transform=trans, download=True)
+mnist_train[0][0].shape # torch.Size([1, 28, 28]) 因为是灰度数据所以通道数为1
+```
+训练数据集有6000张，测试数据集有1000张。测试数据集不用于训练用于评估模型性能，另外这些图像也不以一般格式存储所以你是不能直接打开的，使用的可能是IDX文件格式.
+### 2.显示数据（图像）
+```python
+# 可视化样本
+def show_images(imgs, num_rows, num_cols, titles=None, scale=1.5):  #@save
+	''' 
+	绘制图像列表
+	
+	Parameters:
+	imgs:图像列表
+	num_rows:要显示图像的行数
+	num_cols:要显示的图像的列数
+	title:为每个图像设置标题
+	scale:缩放因子
+	'''
+    figsize = (num_cols * scale, num_rows * scale)
+    _, axes = d2l.plt.subplots(num_rows, num_cols, figsize=figsize)
+    # matplotlib.pyplot库创建一个图形和一组子图轴
+    axes = axes.flatten()  # 展平，类似于矩阵变成一个列表数组，axes是axis(坐标轴)的复数
+    for i, (ax, img) in enumerate(zip(axes, imgs)):
+        if torch.is_tensor(img):
+            # 图片张量
+            ax.imshow(img.numpy())
+        else:
+            # PIL图片
+            ax.imshow(img)
+        ax.axes.get_xaxis().set_visible(False) 
+        ax.axes.get_yaxis().set_visible(False)
+        # 隐藏每个子图的x轴和y轴
+        if titles:
+            ax.set_title(titles[i])
+    return axes
 
+# 定义一个函数显示每个图像的title
+def get_fashion_mnist_labels(labels):  #@save
+    """返回Fashion-MNIST数据集的文本标签"""
+    text_labels = ['t-shirt', 'trouser', 'pullover', 'dress', 'coat',
+                   'sandal', 'shirt', 'sneaker', 'bag', 'ankle boot']
+    return [text_labels[int(i)] for i in labels]
 
+# 显示图像示例
+from torch.utils import data
+X, y = next(iter(data.DataLoader(mnist_train, batch_size=18))) 
+# X是一个批次的图像数据，它通常是一个四维张量，形状为 [batch_size, channels, height, width],y是标签序号
+show_images(X.reshape(18, 28, 28), 2, 9, titles=get_fashion_mnist_labels(y));
+# 将X维度压缩为三维以便适应show_images函数的要求
+```
+### 3.读取小批量数据
+这里直接使用了内置的数据迭代器不是自己写读取函数.
+```python
+batch_size = 256
+
+def get_dataloader_workers():  #@save
+    """使用4个进程来读取数据"""
+    return 4
+
+train_iter = data.DataLoader(mnist_train, batch_size, shuffle=True,
+                             num_workers=get_dataloader_workers())
+# shuffle就是表示是否打乱样本读取小批量(shuffle有洗牌的意思)
+```
+### 4.获取数据并读取
+其实就是一个整合.
+```python
+#这个函数还能通过resize参数调整图像大小
+def load_data_fashion_mnist(batch_size, resize=None):  #@save
+    """下载Fashion-MNIST数据集，然后将其加载到内存中"""
+    trans = [transforms.ToTensor()]
+    if resize:
+        trans.insert(0, transforms.Resize(resize))
+        # transforms.Resize(resize) 将被添加到trans列表的最前面
+    trans = transforms.Compose(trans) # 所有变换组合为复合变换
+    mnist_train = torchvision.datasets.FashionMNIST(
+        root="../data", train=True, transform=trans, download=True)
+    mnist_test = torchvision.datasets.FashionMNIST(
+        root="../data", train=False, transform=trans, download=True)
+    return (data.DataLoader(mnist_train, batch_size, shuffle=True,
+                            num_workers=get_dataloader_workers()),
+            data.DataLoader(mnist_test, batch_size, shuffle=False,
+                            num_workers=get_dataloader_workers()))
+```
+## (六)softmax回归从零开始实现
+### 1.初始化和定义softmax
+获取数据:
+```python
+from IPython import display
+batch_size = 256
+train_iter, test_iter = d2l.load_data_fashion_mnist(batch_size)
+```
+因为图像是$28 \times 28$的,可以看做是一个长度为784的向量,与线性回归一样使用正态分布初始化权重$\mathrm{W}$,偏置初始化为0.
+```python
+num_inputs = 784
+num_outputs = 10
+
+W = torch.normal(0, 0.01, size=(num_inputs, num_outputs), requires_grad=True)
+b = torch.zeros(num_outputs, requires_grad=True)
+```
+回顾一下sum函数,keepdim参数为True的时候能够保持原始张量轴数:
+```python
+X = torch.tensor([[1.0, 2.0, 3.0], [4.0, 5.0, 6.0]])
+X.sum(0, keepdim=True), X.sum(1, keepdim=True)
+# 0是同一列求和
+# 会是以下结果
+# (tensor([[5., 7., 9.]]),
+# tensor([[ 6.],
+#         [15.]]))
+```
+定义softmax函数如下:
+```python
+def softmax(X):
+    X_exp = torch.exp(X) # 求幂
+    partition = X_exp.sum(1, keepdim=True) # 求和
+    return X_exp / partition  # 这里应用了广播机制
+```
+示例:
+```python
+X = torch.normal(0, 1, (2, 5))
+X_prob = softmax(X)
+X_prob, X_prob.sum(1)
+# (tensor([[0.1686, 0.4055, 0.0849, 0.1064, 0.2347],
+#         [0.0217, 0.2652, 0.6354, 0.0457, 0.0321]]),
+# tensor([1.0000, 1.0000]))
+```
+注意这里代码没有考虑到数值上溢或下溢,这里算不够完善.
+### 2.定义模型
+```python
+def net(X):
+    return softmax(torch.matmul(X.reshape((-1, W.shape[0])), W) + b)
+```
+### 3.定义损失函数
