--- a/动手学深度学习.md
+++ b/动手学深度学习.md
@@ -355,4 +355,57 @@ X_prob, X_prob.sum(1)
 def net(X):
     return softmax(torch.matmul(X.reshape((-1, W.shape[0])), W) + b)
 ```
-### 3.定义损失函数
+### 3.定义损失函数和精度
+```python
+def cross_entropy(y_hat, y):
+    return - torch.log(y_hat[range(len(y_hat)), y])
+    # 这里的len(y_hat)返回的是行数
+
+# 示例
+y = torch.tensor([0, 2])
+y_hat = torch.tensor([[0.1, 0.3, 0.6], [0.3, 0.2, 0.5]])
+# y_hat[[0, 1], y]  pytorch提供的取矩阵中元素的方法
+cross_entropy(y_hat, y)
+# tensor([2.3026, 0.6931])
+```
+**分类精度**:正确预测数量与总预测数量之比.也定义一个函数:
+```python
+def accuracy(y_hat, y):  #@save
+    """计算预测正确的数组量"""
+    if len(y_hat.shape) > 1 and y_hat.shape[1] > 1:
+        y_hat = y_hat.argmax(axis=1)
+        # 沿着第一维(行)中找到最大的索引值
+    cmp = y_hat.type(y.dtype) == y
+    # y_hat的数据类型转换为y的数据类型得到bool数组
+    return float(cmp.type(y.dtype).sum())
+    # 返回预测正确样本数量，bool类型转换了一下可计算类型
+```
+评估模型的精度有框架函数定义:
+```python
+# 一个实用类
+class Accumulator:  #@save
+    """在n个变量上累加"""
+    def __init__(self, n):
+        self.data = [0.0] * n
+
+    def add(self, *args):
+        self.data = [a + float(b) for a, b in zip(self.data, args)]
+
+    def reset(self):
+        self.data = [0.0] * len(self.data)
+
+    def __getitem__(self, idx):
+        return self.data[idx]
+
+def evaluate_accuracy(net, data_iter):  #@save
+    """计算在指定数据集上模型的精度"""
+    if isinstance(net, torch.nn.Module):
+        net.eval()  
+        # 将模型设置为评估模式,在深度学习中，某些层的行为在训练和评估（或测试）阶段是不同的
+    metric = Accumulator(2)  # 正确预测数、预测总数
+    with torch.no_grad():
+        for X, y in data_iter:
+            metric.add(accuracy(net(X), y), y.numel()) # y.numel()返回y中元素的总数
+    return metric[0] / metric[1]
+```
+### 4.训练
