--- a/通信原理.md
+++ b/通信原理.md
@@ -72,4 +72,29 @@ $$
 $$\sum_{n=-\infty}^\infty\delta(f-nf_0)=\frac1{f_0}\sum_{m=-\infty}^\infty\mathrm{e}^{\mathrm{j}2\pi\frac m{f_0}f}
 $$
 - 理想采样
-- 
+$$
+\begin{aligned}
+\mathscr{F}[x(t) \sum_{n= -\infty}^{\infty} \delta(t-nT) ]
+&= \mathscr{F}[x(t) \cdot \frac {1}{T} \sum_{m= -\infty}^{\infty}e^{j2\pi\frac{m}{T}t}] \\
+&=X(f)*[\frac{1}{T}\sum_{m=-\infty}^{\infty}\delta(f-\frac{m}{T})] \\
+&=\frac{1}{T} \sum_{m=-\infty}^{\infty} X(f-\frac{m}{T})
+\end{aligned}
+$$
+## 1.2 能量谱密度与功率谱密度
+能量谱密度: $E_x(f) = |X(f)|^2$
+功率谱密度: $P_x(f) = \mathrm{lim}_{T \to \infty} \frac{|X_T(f)|^2}{T}$
+**能量信号自相关函数**:
+- $R_x(\tau)=\int_{-\infty}^{\infty}x^*(t)x(t+\tau) \mathrm{d}t$
+- $E_x(f) = \int _{-\infty}^{\infty}R_x(\tau)e^{-j2 \pi ft} \mathrm{d}\tau$  即自相关函数傅氏变换是能量谱密度
+- $R_x(\tau) = R^{*} (-\tau)$ 
+**功率信号自相关函数**:
+- $R_x(\tau)=\overline{x^*(t)x(t+\tau)}=\lim_{T\to\infty}\frac{1}{T}\int_{-T/2}^{T/2}x^*(t)x(t+\tau) \mathrm{d}t$
+-  $P_x(f) = \int _{-\infty}^{\infty}R_x(\tau)e^{-j2 \pi ft} \mathrm{d}\tau$  即自相关函数傅氏变换是功率谱密度
+- $R_x(\tau) = R^{*} (-\tau)$ 
+**互谱密度**:
+- 令$z(t) = x(t) +y(t)$ , $R_z(\tau) = R_x(\tau) + R_y(\tau) + R_{xy}(\tau) +R_{yx}(\tau)$ ,其中$R_{xy}(\tau) = R_{yx}(-\tau)$, 两边做傅氏变换:$E_z(f) = E_x(f) + E_y(f) +E_{xy}(f) +E_{yx}(f)$, 其中$E_{xy}(f)=X^{*} (f)Y(f) ,E_{yx}(f)=Y^{*} (f)X(f)$称为互能量谱密度. 当$R_{xy}(\tau)$为奇函数时$E_z(f) = E_x(f) + E_y(f)$
+- 可直接扩展到功率信号
+**单边谱**: $P_{x}^{\text{单边}}(f)=P_{x}(f)+P_{x}(-f)=2P_{x}(f)\quad f\geqslant0$
+## 1.3 线性时不变系统
+
+
