--- a/通信原理.md
+++ b/通信原理.md
@@ -81,8 +81,8 @@ $$
 \end{aligned}
 $$
 ## 1.2 能量谱密度与功率谱密度
-能量谱密度: $E_x(f) = |X(f)|^2$
-功率谱密度: $P_x(f) = \mathrm{lim}_{T \to \infty} \frac{|X_T(f)|^2}{T}$
+**能量谱密度**: $E_x(f) = |X(f)|^2$
+**功率谱密度**: $P_x(f) = \mathrm{lim}_{T \to \infty} \frac{|X_T(f)|^2}{T}$
 **能量信号自相关函数**:
 - $R_x(\tau)=\int_{-\infty}^{\infty}x^*(t)x(t+\tau) \mathrm{d}t$
 - $E_x(f) = \int _{-\infty}^{\infty}R_x(\tau)e^{-j2 \pi ft} \mathrm{d}\tau$  即自相关函数傅氏变换是能量谱密度
@@ -94,7 +94,32 @@ $$
 **互谱密度**:
 - 令$z(t) = x(t) +y(t)$ , $R_z(\tau) = R_x(\tau) + R_y(\tau) + R_{xy}(\tau) +R_{yx}(\tau)$ ,其中$R_{xy}(\tau) = R_{yx}(-\tau)$, 两边做傅氏变换:$E_z(f) = E_x(f) + E_y(f) +E_{xy}(f) +E_{yx}(f)$, 其中$E_{xy}(f)=X^{*} (f)Y(f) ,E_{yx}(f)=Y^{*} (f)X(f)$称为互能量谱密度. 当$R_{xy}(\tau)$为奇函数时$E_z(f) = E_x(f) + E_y(f)$
 - 可直接扩展到功率信号
+**周期信号**:
+- 周期信号$e^{j 2 \pi f_0 t}$的功率为1,功率谱密度为$\delta(f-f_0)$,自相关函数为$e^{j2\pi f_0 \tau}$
+- 周期信号$d(t) = \sum_{n=-\infty}^{\infty}\delta(t-nT_s)=\frac{1}{T_s}\sum_{k=-\infty}^{\infty}e^{j2\pi \frac{k}{T_s}t}$的功率谱密度$P_d(f)$为$\frac{1}{T_s^2}\delta (f- \frac{k}{T_s})$, 自相关函数$R_d(f)$为$\frac{1}{T_s^2}\sum_{k=-\infty}^{\infty}e^{j2\pi \frac{k}{T_s} \tau} = \frac{1}{T_s} \sum_{n=-\infty}^{\infty}\delta(\tau -nT_s)$
+- 周期信号$s(t) = \sum_{n=-\infty}^{\infty}g(t-nT_s)$的功率谱密度$P_s(f) = \frac{1}{T_s^2} \sum_{k=-\infty}^{\infty}|G(\frac{k}{T_s})|^2\delta(f-\frac{k}{T_s})$,自相关函数$R_d(\tau)=\frac1{T_s}\sum_{n=-\infty}^{\infty}R_g(\tau-nT_s)$
 **单边谱**: $P_{x}^{\text{单边}}(f)=P_{x}(f)+P_{x}(-f)=2P_{x}(f)\quad f\geqslant0$
+**信号带宽**:(以基带功率信号为例,其它如基带能量信号可类似定义)
+- 如果信号的能量或功率主要集中在零频附近,则称此信号为基带信号,如果主要集中在某个载波频率附近,则称此信号为频带信号或带通信号.
+- ==绝对带宽==$W$:$[-W,W]$之外确定为0,$[-W,W]$之内基本不为0.
+- 若绝对带宽无限且存在一些（周期性）零点,并且功率大部分在第一个零点内,则这个第一零点$W$称为$x(t)$的==主瓣带宽==.
+- 功率谱最高点出现在$f=0$处,相对于$f=0$下降一般的位置$W$称为==3dB带宽==
+- $P_x(f)$的面积与一个同高的矩形功率谱密度相同,后者带宽称为==等效矩形带宽==$W = \frac{\int_{-\infty}^{\infty}P_x(f) \mathrm{d}f}{2P_x(0)}$.
+- 实际中还有占某个比例的带宽$\frac{\int_{-W}^{W}P_x(f) \mathrm{d}f }{\int_{-\infty}^{\infty}P_x(f) \mathrm{d}f}=? \%$
 ## 1.3 线性时不变系统
 
+### 1.3.1 复单频信号通过线性系统
 
+周期信号$s(t)=\sum g(t -nT)$可以看成$\sum \delta(t-nT)$通过一个冲激响应为$g(t)$的滤波器,$s(t)$通过冲击响应为$h(t)$的滤波器就等于通过两个级联的滤波器,令$x(t)=g(t)\cdot h(t)$则输出是$\sum _{n=-\infty}^{\infty}x(t-nT)$.
+### 1.3.2 通过传递函数的能量谱/功率谱
+$$
+\begin{aligned}
+Y(f) &= X(f)H(f) \\
+E_y(f) &= E_x(f)|H(f)|^2 \\
+P_y(f) &= P_x(f) |H(f)|^2
+\end{aligned}
+$$
+### 1.3.3 希尔伯特变换与解析信号
+$$
+\hat{x}
+$$
