--- a/通信原理.md
+++ b/通信原理.md
@@ -7,7 +7,7 @@ $$
 令$\Delta f=\frac1T,f_n=\frac nT=n\Delta f,S_n=s_nT=\frac{s_n}{\Delta f}$。 $T\to\infty$ 时变为傅里叶变换:
 $$
 \begin{aligned}
-x(t)=\mathscr{F}^{-1}\bigl[X(f)\bigr]=\int_{-\infty}^{\infty}X(f) \mathrm{e}^{\mathrm{j}2\pi ft} \mathrm{d}f\\X(f)=\mathscr{F}\bigl[x(t)\bigr]=\int_{-\infty}^{\infty}X(t) \mathrm{e}^{-\mathrm{j}2\pi ft} \mathrm{d}t
+x(t)=\mathscr{F}^{-1}\bigl[X(f)\bigr]=\int_{-\infty}^{\infty}X(f) \mathrm{e}^{\mathrm{j}2\pi ft} \mathrm{d}f\\X(f)=\mathscr{F}\bigl[x(t)\bigr]=\int_{-\infty}^{\infty}x(t) \mathrm{e}^{-\mathrm{j}2\pi ft} \mathrm{d}t
 \end{aligned}
 $$
 时域内积等于频域内积:
@@ -115,11 +115,37 @@ $$
 $$
 \begin{aligned}
 Y(f) &= X(f)H(f) \\
-E_y(f) &= E_x(f)|H(f)|^2 \\
-P_y(f) &= P_x(f) |H(f)|^2
+E_y(f) &= E_x(f)\mid H(f)\mid^2 \\
+P_y(f) &= P_x(f) \mid H(f)\mid^2
 \end{aligned}
 $$
 ### 1.3.3 希尔伯特变换与解析信号
+**希尔波特变换**:
 $$
-\hat{x}
+\begin{aligned}
+&\hat{x}(t) =x(t)*\frac{1}{\pi t}= \int_{-\infty}^{\infty}\frac{x(t-u)}{\pi u}\mathrm{d}u \\
+&\hat{X}(f) = -j \mathrm{sign}(f)X(f)
+\end{aligned}
 $$
+由于$\mid -j \mathrm{sign}(f)X(f) \mid^2=1$所以$\hat{x}(t)$与$x(t)$有相同的能量谱密度或功率谱密度,有相同的自相关函数.实际上$H\{\cos\omega t\}=\sin\omega t=\cos(\omega t-\frac\pi2)$,$H\{e^{i(\omega t+\varphi)}\}=e^{i(\omega t+\varphi-\frac{\pi}{2})}$,希尔伯特变换是一个$90^\circ$的移相器，也即延迟四分之一个周期.
+**解析信号**:
+$$
+z(t) = x(t) + j \hat{x}(t)
+$$
+可以看成$x(t)$通过了一个传递函数为$H(f)=1+j[-j\mathrm{sign}(f)]=1+\mathrm{sign}(f)$的滤波器后的输出.所以频谱:
+$$
+Z(f)=
+\begin{cases}
+2X(f) &f>0 \\
+0 &f<0
+\end{cases}
+$$
+即解析信号只有正频率分量,反之若某个信号只有正频率分量则它是解析信号其虚部是实部的希尔伯特变换.
+$z(t)$的共轭$z^*(t)$只有负频率分量,两者正交,具有相同的能量和功率谱密度.
+## 1.4 带通信号与带通系统
+若载频$f_c$远大于信号带宽称为窄带信号.
+### 1.4.1 复包络
+$$
+x_{L}=[x(t)+j\hat{x}(t)]e^{-j 2\pi f_{c} t}
+$$
+
